added a button rotation to navbar

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <div class="collapse navbar-collapse navbar-dark justify-content-end" id="navbarNav">
             <ul class="navbar-nav roboto text-uppercase">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active dcam-btn" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="lessonsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Music Lessons</a>
+                    <a class="nav-link dropdown-toggle dcam-btn" href="#" id="lessonsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Music Lessons</a>
                     <ul class="dropdown-menu dcam-blue-reg" aria-labelledby="lessonsDropdown">
                       <li><a class="dropdown-item" href="#">Piano Lessons</a></li>
                       <li><a class="dropdown-item" href="#">Guitar Lessons</a></li>
@@ -43,32 +43,32 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="rates.html">Rates</a>
+                    <a class="nav-link dcam-btn" href="rates.html">Rates</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="teachers.html">Teachers</a>
+                    <a class="nav-link dcam-btn" href="teachers.html">Teachers</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Reviews</a>
+                    <a class="nav-link dcam-btn" href="#">Reviews</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Gallery</a>
+                    <a class="nav-link dcam-btn" href="#">Gallery</a>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">About Us</a>
+                  <a class="nav-link dropdown-toggle dcam-btn" href="#" id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">About Us</a>
                   <ul class="dropdown-menu dcam-blue-reg" aria-labelledby="aboutDropdown">
                     <li><a class="dropdown-item" href="our-mission.html">Our Mission</a></li>
                     <li><a class="dropdown-item" href="our-story.html">Our Story</a></li>
                   </ul>
               </li>
               <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
+                    <a class="nav-link dcam-btn" href="contact.html">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Blog</a>
+                    <a class="nav-link dcam-btn" href="#">Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Shop</a>
+                    <a class="nav-link dcam-btn" href="#">Shop</a>
                 </li>
             </ul>
         </div>
