--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
 <!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light p-0 sticky-top">
-  <div class="container-fluid dcam-blue-reg">
+  <div class="container-fluid dcam-blue-dark">
     <a class="navbar-brand" href="index.html">
-      <img src="img/dcam-logo-white.png" alt="Da Capo Academy of Music Logo" width="200" class="p-1">
+      <img src="img/dcam-logo-white.png" alt="Da Capo Academy of Music Logo" width="280" class="py-2">
     </a>    
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -78,24 +78,21 @@
 
 <!-- BANNER -->
   <div class="container-fluid bg-dcam bg-light mb-5">
-    <div class="row">
+    <div class="row d-flex justify-content-end">
 
-        <div class="col-lg-3 col-xxl-3 p-3 text-center text-lg-left">
-            <a href="index.html"><img class="img-fluid w-75" src="img/logo.png" alt="Da Capo Academy of Music Logo"></a>
-        </div>
+        <div class="col-lg-6 col-xxl-7 pe-0 text-center mt-5">
+            <div>
+              <h1 class="display-4 dcam-text-orange roboto-ital roboto-bold">Music Lessons in Etobicoke</h1>
+              <p class="lead">Discover the joy that music can bring, register for your free trial today!</p>
+            </div>
 
-        <div class="col-lg-6 col-xxl-7 text-center p-5">
-            <h1 class="display-4 ovo">Music Lessons in Etobicoke</h1>
-            <p class="lead">Discover the joy that music can bring, register for your free trial today!</p>
-
-            <div class="d-md-flex justify-content-center mt-5">
-                    <!-- <div class="btn btn-success btn-lg mb-3 mb-sm-0 me-3 text-nowrap">Free Trial Lesson</div> -->
+            <div class="d-md-flex justify-content-center pt-5 mb-5">
                     <button type="button" class="btn btn-success btn-lg mb-3 mb-sm-0 me-3 text-nowrap" data-bs-toggle="modal" data-bs-target="#trialModal">Free Trial Lesson</button>
-                    <div class="btn btn-primary btn-lg mt-3 mt-sm-0 ms-3 text-nowrap">Download Info Pack</div>
+                    <button type="button" class="btn btn-primary btn-lg mt-3 mt-sm-0 ms-3 text-nowrap">Download Info Pack</button>
             </div>
         </div>
         <div class="col-lg-3 col-xxl-2 d-flex p-5 flex-column justify-content-center filter text-light text-center">
-            <h3 class="ovo">Contact Us:</h3>
+            <h3 class="ovo text-nowrap">Contact Us:</h3>
             <a role="button" class="btn text-light text-nowrap" href="tel:+14162379595"><i class="fas fa-phone"></i> (416) 237-9595</a>
             <a role="button" class="btn text-light text-nowrap" href="mailto:info@dacapomusic.ca"><i class="fas fa-envelope"></i> info@dacapomusic.ca</a>
         </div>
