--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light p-0 sticky-top">
   <div class="container-fluid dcam-blue-dark">
     <a class="navbar-brand" href="index.html">
-      <img src="img/dcam-logo-white.png" alt="Da Capo Academy of Music Logo" width="280" class="py-2">
+      <img src="img/dcam-logo-white.png" class="img-btn" alt="Da Capo Academy of Music Logo" width="280" class="py-2">
     </a>    
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -32,7 +32,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle dcam-btn" href="#" id="lessonsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Music Lessons</a>
                     <ul class="dropdown-menu dcam-blue-reg" aria-labelledby="lessonsDropdown">
-                      <li><a class="dropdown-item" href="#">Piano Lessons</a></li>
+                      <li><a class="dropdown-item" href="piano-lessons.html">Piano Lessons</a></li>
                       <li><a class="dropdown-item" href="#">Guitar Lessons</a></li>
                       <li><a class="dropdown-item" href="#">Drum Lessons</a></li>
                       <li><a class="dropdown-item" href="#">Voice Lessons</a></li>
@@ -87,7 +87,7 @@
             </div>
 
             <div class="d-md-flex justify-content-center pt-5 mb-5">
-                    <button type="button" class="btn btn-success btn-lg mb-3 mb-sm-0 me-3 text-nowrap" data-bs-toggle="modal" data-bs-target="#trialModal">Free Trial Lesson</button>
+                    <button type="button" class="btn btn-warning text-light btn-lg mb-3 mb-sm-0 me-3 text-nowrap" data-bs-toggle="modal" data-bs-target="#trialModal">Free Trial Lesson</button>
                     <button type="button" class="btn btn-primary btn-lg mt-3 mt-sm-0 ms-3 text-nowrap">Download Info Pack</button>
             </div>
         </div>
