added styling to dropdown menu items

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle dcam-btn" href="#" id="lessonsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Music Lessons</a>
-                    <ul class="dropdown-menu dcam-blue-reg" aria-labelledby="lessonsDropdown">
+                    <ul class="dropdown-menu" aria-labelledby="lessonsDropdown">
                       <li><a class="dropdown-item" href="piano-lessons.html">Piano Lessons</a></li>
                       <li><a class="dropdown-item" href="#">Guitar Lessons</a></li>
                       <li><a class="dropdown-item" href="#">Drum Lessons</a></li>
