updated navbar to gradient color, modified padding

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
 <!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light p-0 sticky-top">
-  <div class="container-fluid dcam-blue-dark">
+  <div class="container-fluid dcam-nav-bg">
     <a class="navbar-brand" href="index.html">
-      <img src="img/dcam-logo-white.png" class="img-btn" alt="Da Capo Academy of Music Logo" width="280" class="py-2">
+      <img src="img/dcam-logo-white.png" class="img-btn py-2" alt="Da Capo Academy of Music Logo" width="250">
     </a>    
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
