added gradient effect to footer on all pages

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light p-0 sticky-top">
-  <div class="container-fluid dcam-nav-bg">
+  <div class="container-fluid dcam-bg-gradient">
     <a class="navbar-brand" href="index.html">
       <img src="img/dcam-logo-white.png" class="img-btn py-2" alt="Da Capo Academy of Music Logo" width="250">
     </a>    
@@ -77,27 +77,27 @@
 
 
 <!-- BANNER -->
-  <div class="container-fluid bg-dcam bg-light mb-5">
-    <div class="row d-flex justify-content-end">
+<div class="container-fluid bg-dcam bg-light mb-5">
+  <div class="row d-flex justify-content-end">
 
-        <div class="col-lg-6 col-xxl-7 pe-0 text-center mt-5">
-            <div>
-              <h1 class="display-4 dcam-text-orange roboto-ital roboto-bold">Music Lessons in Etobicoke</h1>
-              <p class="lead">Discover the joy that music can bring, register for your free trial today!</p>
-            </div>
+      <div class="col-lg-6 col-xxl-7 pe-0 text-center mt-5">
+          <div>
+            <h1 class="display-4 dcam-text-orange roboto-ital roboto-bold">Music Lessons in Etobicoke</h1>
+            <p class="lead">Discover the joy that music can bring, register for your free trial today!</p>
+          </div>
 
-            <div class="d-md-flex justify-content-center pt-5 mb-5">
-                    <button type="button" class="btn btn-warning text-light btn-lg mb-3 mb-sm-0 me-3 text-nowrap" data-bs-toggle="modal" data-bs-target="#trialModal">Free Trial Lesson</button>
-                    <button type="button" class="btn btn-primary btn-lg mt-3 mt-sm-0 ms-3 text-nowrap" data-bs-toggle="modal" data-bs-target="#infoModal">Download Info Pack</button>
-            </div>
-        </div>
-        <div class="col-lg-3 col-xxl-2 d-flex p-5 flex-column justify-content-center filter text-light text-center">
-            <h3 class="ovo text-nowrap">Contact Us:</h3>
-            <a role="button" class="btn text-light text-nowrap" href="tel:+14162379595"><i class="fas fa-phone"></i> (416) 237-9595</a>
-            <a role="button" class="btn text-light text-nowrap" href="mailto:info@dacapomusic.ca"><i class="fas fa-envelope"></i> info@dacapomusic.ca</a>
-        </div>
+          <div class="d-md-flex justify-content-center pt-5 mb-5">
+                  <button type="button" class="btn btn-warning text-light btn-lg mb-3 mb-sm-0 me-3 text-nowrap" data-bs-toggle="modal" data-bs-target="#trialModal">Free Trial Lesson</button>
+                  <button type="button" class="btn btn-primary btn-lg mt-3 mt-sm-0 ms-3 text-nowrap" data-bs-toggle="modal" data-bs-target="#infoModal">Download Info Pack</button>
+          </div>
+      </div>
+      <div class="col-lg-3 col-xxl-2 d-flex p-5 flex-column justify-content-center filter text-light text-center">
+          <h3 class="ovo text-nowrap">Contact Us:</h3>
+          <a role="button" class="btn text-light text-nowrap" href="tel:+14162379595"><i class="fas fa-phone"></i> (416) 237-9595</a>
+          <a role="button" class="btn text-light text-nowrap" href="mailto:info@dacapomusic.ca"><i class="fas fa-envelope"></i> info@dacapomusic.ca</a>
+      </div>
 
-    </div><!--/row-->
+  </div><!--/row-->
 </div><!--/BANNER-->
 
 
@@ -469,17 +469,17 @@
 </div>
 
 <!-- FOOTER SECTION -->
-<div class="container-fluid mt-5">
+<div class="container-fluid mt-5 dcam-bg-gradient">
   <div class="row">
 
-      <div class="col-sm-6 col-lg-3 dcam-blue-dark py-5 ps-5">
+      <div class="col-sm-6 col-lg-3 py-5 ps-5">
           <h5 class="text-light ovo">FOLLOW US:</h5>
           <a href="https://www.facebook.com/dacapomusic.ca/"><i class="fab fa-facebook-square fa-3x ps-0 pe-2"></i></a>
           <a href="https://www.instagram.com/dacapomusic.ca/"><i class="fab fa-instagram-square fa-3x p-2"></i></a>
           <a href="https://www.youtube.com/watch?v=gSPAOkyO4AA"><i class="fab fa-youtube-square fa-3x p-2"></i></a>
       </div>
 
-      <div class="col-sm-6 col-lg-3 dcam-blue-dark py-5 ps-5">
+      <div class="col-sm-6 col-lg-3 py-5 ps-5">
         <h5 class="text-light ovo mb-3">WHAT WE OFFER:</h5>
         <ul class="nav flex-column">
           <li class="nav-item">
@@ -508,7 +508,7 @@
 
       </div>
 
-      <div class="col-sm-6 col-lg-3 dcam-blue-dark py-5 ps-5">
+      <div class="col-sm-6 col-lg-3 py-5 ps-5">
         <h5 class="text-light ovo mb-3">LEARN MORE:</h5>
 
         <ul class="nav flex-column">
@@ -534,7 +534,7 @@
 
       </div>
 
-      <div class="col-sm-6 col-lg-3 dcam-blue-dark py-5 ps-5">
+      <div class="col-sm-6 col-lg-3 py-5 ps-5">
           <h5 class="text-light ovo mb-3">CONTACT US:</h5>
 
         <ul class="nav flex-column">
@@ -557,8 +557,8 @@
           <small>&copy 2021 Da Capo Academy of Music Inc.</small>
       </div>
   </div><!--/footer row-->
-</div><!--/footer container-->
-
+</div>
+<!--/FOOTER SECTION-->
 
 
 
