--- a/teachers.html
+++ b/teachers.html
@@ -17,7 +17,7 @@
 
 <!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light p-0 sticky-top">
-  <div class="container-fluid dcam-nav-bg">
+  <div class="container-fluid dcam-bg-gradient">
     <a class="navbar-brand" href="index.html">
       <img src="img/dcam-logo-white.png" class="img-btn py-2" alt="Da Capo Academy of Music Logo" width="250">
     </a>    
@@ -327,17 +327,17 @@
 
 
 <!-- FOOTER SECTION -->
-<div class="container-fluid mt-5">
+<div class="container-fluid mt-5 dcam-bg-gradient">
   <div class="row">
 
-      <div class="col-sm-6 col-lg-3 dcam-blue-dark py-5 ps-5">
+      <div class="col-sm-6 col-lg-3 py-5 ps-5">
           <h5 class="text-light ovo">FOLLOW US:</h5>
           <a href="https://www.facebook.com/dacapomusic.ca/"><i class="fab fa-facebook-square fa-3x ps-0 pe-2"></i></a>
           <a href="https://www.instagram.com/dacapomusic.ca/"><i class="fab fa-instagram-square fa-3x p-2"></i></a>
           <a href="https://www.youtube.com/watch?v=gSPAOkyO4AA"><i class="fab fa-youtube-square fa-3x p-2"></i></a>
       </div>
 
-      <div class="col-sm-6 col-lg-3 dcam-blue-dark py-5 ps-5">
+      <div class="col-sm-6 col-lg-3 py-5 ps-5">
         <h5 class="text-light ovo mb-3">WHAT WE OFFER:</h5>
         <ul class="nav flex-column">
           <li class="nav-item">
@@ -366,7 +366,7 @@
 
       </div>
 
-      <div class="col-sm-6 col-lg-3 dcam-blue-dark py-5 ps-5">
+      <div class="col-sm-6 col-lg-3 py-5 ps-5">
         <h5 class="text-light ovo mb-3">LEARN MORE:</h5>
 
         <ul class="nav flex-column">
@@ -392,7 +392,7 @@
 
       </div>
 
-      <div class="col-sm-6 col-lg-3 dcam-blue-dark py-5 ps-5">
+      <div class="col-sm-6 col-lg-3 py-5 ps-5">
           <h5 class="text-light ovo mb-3">CONTACT US:</h5>
 
         <ul class="nav flex-column">
@@ -415,7 +415,8 @@
           <small>&copy 2021 Da Capo Academy of Music Inc.</small>
       </div>
   </div><!--/footer row-->
-</div><!--/footer container-->
+</div>
+<!--/FOOTER SECTION-->
 
 
 
