created a testimonials section on home page, changed toggle-icon color in navbar

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 <body>
 
 <!-- NAVBAR -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light p-0 sticky-top">
+<nav class="navbar navbar-expand-lg navbar-dark p-0 sticky-top">
   <div class="container-fluid dcam-bg-gradient">
     <a class="navbar-brand" href="index.html">
       <img src="img/dcam-logo-white.png" class="img-btn py-2" alt="Da Capo Academy of Music Logo" width="250">
