--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
 <!-- NAVBAR -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light p-0 sticky-top">
+<nav class="navbar navbar-expand-lg navbar-dark p-0 sticky-top">
   <div class="container-fluid dcam-bg-gradient">
     <a class="navbar-brand" href="index.html">
       <img src="img/dcam-logo-white.png" class="img-btn py-2" alt="Da Capo Academy of Music Logo" width="250">
@@ -458,15 +458,98 @@
 </div><!--/teachers section-->
 
 
-<!-- BEFORE FOOTER SECTION -->
+<!-- TESTIMONIALS SECTION -->
 
 <div class="container py-5">
-  <div class="row">
-    This is a row
 
-  </div>
+  <div class="row row-cols-1 row-cols-md-2 row-cols-xl-4 g-4">
+
+    <div class="col">
+      <div class="card testimonials-bg testimonials-shadow p-4">
+        <div class="text-start pb-2"><i class="fas fa-quote-left fa-lg"></i></div>
+          <p>
+              My 5 year old son loves his guitar lessons . He has lot of fun with Andrew. Great school with great teachers. Good location with lot of free parking. I can only recommend it.
+          </p>
+          <div class="text-end">
+              <i class="fas fa-quote-right fa-lg"></i>
+          </div>
+          <div class="d-flex pt-4">
+              <div>
+                  <img src="img/testimonials/lenka.png">
+              </div>
+              <div class="ms-3">
+                  <h6 class="mb-0">Lenka Wendl</h6>
+                  <small>parent</small>
+              </div>
+          </div>
+      </div>
+    </div><!-- /card column-->
+
+
+    <div class="col">
+      <div class="card testimonials-bg testimonials-shadow p-4">
+        <div class="text-start pb-2"><i class="fas fa-quote-left fa-lg"></i></div>
+          <p>
+              I have been learning from the teachers here for many years, from when I was a little kid to now when I'm well into high school. Even now, they're still always teaching me something new during our lessons. Da Capo is a great school with teachers who are truly passionate about music.          
+          </p>
+          <div class="text-end"><i class="fas fa-quote-right fa-lg"></i></div>
+          <div class="d-flex pt-4">
+              <div>
+                  <img src="img/testimonials/nicole.png">
+              </div>
+              <div class="ms-3">
+                  <h6 class="mb-0">Nicole Planeta</h6>
+                  <small>parent</small>
+              </div>
+          </div>
+      </div>
+    </div><!-- /card column-->
+
+
+    <div class="col">
+      <div class="card testimonials-bg testimonials-shadow p-4">
+        <div class="text-start pb-2"><i class="fas fa-quote-left fa-lg"></i></div>
+          <p>
+              DaCapo is a wonderful place to learn music. The teachers are patient, fun, flexible and highly qualified. My daughter loves it!
+          </p>
+          <div class="text-end"><i class="fas fa-quote-right fa-lg"></i></div>
+          <div class="d-flex pt-4">
+              <div>
+                  <img src="img/testimonials/daniel.png">
+              </div>
+              <div class="ms-3">
+                  <h6 class="mb-0">Daniel Vendramin</h6>
+                  <small>parent</small>
+              </div>
+          </div>
+      </div>
+    </div><!-- /card column-->
+
+    
+    <div class="col">
+      <div class="card testimonials-bg testimonials-shadow p-4">
+        <div class="text-start pb-2"><i class="fas fa-quote-left fa-lg"></i></div>
+          <p>
+              I highly recommend them. I am 36 years old and I thought it would impossible at this point of my life to learn how to play piano. I am still learning, it’s been only 8 months but their technique is great. Terry is my teacher and honestly, I couldn’t think of anyone better for this.          
+          </p>
+          <div class="text-end"><i class="fas fa-quote-right fa-lg"></i></div>
+          <div class="d-flex pt-4">
+              <div>
+                  <img src="img/testimonials/viviane.png">
+              </div>
+              <div class="ms-3">
+                  <h6 class="mb-0">Viviane Sena</h6>
+                  <small>parent</small>
+              </div>
+          </div>
+      </div>
+    </div><!-- /card column-->
+
+  </div><!-- /testimonials row -->
 
 </div>
+<!-- /TESTIMONIALS SECTION -->
+
 
 <!-- FOOTER SECTION -->
 <div class="container-fluid mt-5 dcam-bg-gradient">
