--- a/index.html
+++ b/index.html
@@ -462,12 +462,17 @@
 
 <div class="container py-5">
 
+  <div class="col-md-12 text-center mb-5 text-dark">
+    <h2>What our students and families say</h2>
+  </div>
+
+
   <div class="row row-cols-1 row-cols-md-2 row-cols-xl-4 g-4">
 
     <div class="col">
       <div class="card testimonials-bg testimonials-shadow p-4">
         <div class="text-start pb-2"><i class="fas fa-quote-left fa-lg"></i></div>
-          <p>
+          <p class="roboto-ital">
               My 5 year old son loves his guitar lessons . He has lot of fun with Andrew. Great school with great teachers. Good location with lot of free parking. I can only recommend it.
           </p>
           <div class="text-end">
@@ -489,7 +494,7 @@
     <div class="col">
       <div class="card testimonials-bg testimonials-shadow p-4">
         <div class="text-start pb-2"><i class="fas fa-quote-left fa-lg"></i></div>
-          <p>
+          <p class="roboto-ital">
               I have been learning from the teachers here for many years, from when I was a little kid to now when I'm well into high school. Even now, they're still always teaching me something new during our lessons. Da Capo is a great school with teachers who are truly passionate about music.          
           </p>
           <div class="text-end"><i class="fas fa-quote-right fa-lg"></i></div>
@@ -499,7 +504,7 @@
               </div>
               <div class="ms-3">
                   <h6 class="mb-0">Nicole Planeta</h6>
-                  <small>parent</small>
+                  <small>student</small>
               </div>
           </div>
       </div>
@@ -509,7 +514,7 @@
     <div class="col">
       <div class="card testimonials-bg testimonials-shadow p-4">
         <div class="text-start pb-2"><i class="fas fa-quote-left fa-lg"></i></div>
-          <p>
+          <p class="roboto-ital">
               DaCapo is a wonderful place to learn music. The teachers are patient, fun, flexible and highly qualified. My daughter loves it!
           </p>
           <div class="text-end"><i class="fas fa-quote-right fa-lg"></i></div>
@@ -529,7 +534,7 @@
     <div class="col">
       <div class="card testimonials-bg testimonials-shadow p-4">
         <div class="text-start pb-2"><i class="fas fa-quote-left fa-lg"></i></div>
-          <p>
+          <p class="roboto-ital">
               I highly recommend them. I am 36 years old and I thought it would impossible at this point of my life to learn how to play piano. I am still learning, it’s been only 8 months but their technique is great. Terry is my teacher and honestly, I couldn’t think of anyone better for this.          
           </p>
           <div class="text-end"><i class="fas fa-quote-right fa-lg"></i></div>
@@ -539,7 +544,7 @@
               </div>
               <div class="ms-3">
                   <h6 class="mb-0">Viviane Sena</h6>
-                  <small>parent</small>
+                  <small>student</small>
               </div>
           </div>
       </div>
@@ -551,8 +556,23 @@
 <!-- /TESTIMONIALS SECTION -->
 
 
+
+<div class="container-fluid get-started d-flex align-items-center">
+
+  <div class="ms-5 filter p-4 rounded">
+    <h2 class="display-3 text-light">Ready to get started?</h2>
+    <p class="lead text-light pt-2">Ready to begin your musical journey with DCAM?<br>Schedule your free in-person or online trial lesson today!</p>
+    <div class="pt-4 text-center">
+      <button type="button" class="btn btn-warning text-light btn-lg mb-3 mb-sm-0 me-3 text-nowrap" data-bs-toggle="modal" data-bs-target="#trialModal">Free Trial Lesson</button>
+      <button type="button" class="btn btn-primary btn-lg mt-3 mt-sm-0 ms-3 text-nowrap" data-bs-toggle="modal" data-bs-target="#infoModal">Download Info Pack</button>
+    </div>
+  </div>
+
+</div>
+
+
 <!-- FOOTER SECTION -->
-<div class="container-fluid mt-5 dcam-bg-gradient">
+<div class="container-fluid dcam-bg-gradient">
   <div class="row">
 
       <div class="col-sm-6 col-lg-3 py-5 ps-5">
